Werkzeug Changelog
==================


Version 0.13
------------

unreleased

- Raise ``TypeError`` when port is not an integer.
- Fully deprecate ``werkzeug.script``. Use `Click <http://click.pocoo.org>`_
  instead.
- ``response.age`` is parsed as a ``timedelta``. Previously, it was incorrectly
  treated as a ``datetime``. The header value is an integer number of seconds,
  not a date string. (``#414``)
- Fix a bug in ``TypeConversionDict`` where errors are not propagated when
  using the converter. (``#1102``)
- ``Authorization.qop`` is a string instead of a set, to comply with
  RFC 2617. (``#984``)
- An exception is raised when an encoded cookie is larger than, by default,
  4093 bytes. Browsers may silently ignore cookies larger than this.
  ``BaseResponse`` has a new attribute ``max_cookie_size`` and ``dump_cookie``
  has a new argument ``max_size`` to configure this. (`#780`_, `#1109`_)
- Fix a TypeError in ``werkzeug.contrib.lint.GuardedIterator.close``.
- ``BaseResponse.calculate_content_length`` now correctly works for unicode
  responses on Python 3. It first encodes using `iter_encoded`.

.. _`#780`: https://github.com/pallets/werkzeug/pull/780
.. _`#1109`: https://github.com/pallets/werkzeug/pull/1109


Version 0.12.2
--------------

Released on May 16 2017

- Fix regression: Pull request ``#892`` prevented Werkzeug from correctly
  logging the IP of a remote client behind a reverse proxy, even when using
  `ProxyFix`.
- Fix a bug in `safe_join` on Windows.

Version 0.12.1
--------------

Released on March 15th 2017

- Fix crash of reloader (used on debug mode) on Windows.
  (`OSError: [WinError 10038]`). See pull request ``#1081``
- Partially revert change to class hierarchy of `Headers`. See ``#1084``.

Version 0.12
------------

Released on March 10th 2017

- Spit out big deprecation warnings for werkzeug.script
- Use `inspect.getfullargspec` internally when available as
  `inspect.getargspec` is gone in 3.6